# xfce4-systemload-plugin

./: README  configure.ac.in
panel-plugin/: Makefile.am  gpu.c  gpu.h  systemload.c  systemloaddummy.desktop  systemloaddummy.desktop.in  systemloadgpu.desktop  systemloadgpu.desktop.in
